--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="res/css/brands.min.css" rel="stylesheet">
   <link href="res/css/fontawesome.min.css" rel="stylesheet">
 
-  <title>Développeur Web Full Stack | Romuald Nave</title>
+  <title>Romuald Nave | Senior Full Stack Web Developer</title>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168607474-1"></script>
   <script>
