Add freelance mention

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="res/css/brands.min.css" rel="stylesheet">
   <link href="res/css/fontawesome.min.css" rel="stylesheet">
 
-  <title>Romuald Nave | Senior Full Stack Web Developer</title>
+  <title>Romuald Nave | Freelance Sr Full Stack Web Developer</title>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168607474-1"></script>
   <script>
@@ -33,7 +33,7 @@
       <img class="photo" src="res/img/avatar.png" />
       <div class="solution">
         <h1>Romuald Nave</h1>
-        <p>Senior Full Stack Web Developer</p>
+        <p>Freelance Senior Full Stack Web Developer</p>
         <div class="links">
           <a href="https://linkedin.com/in/romualdnave" target="_blank">
             <i class="fab fa-3x fa-linkedin"></i>
